finalização do desafio 001

--- a/Web dev/HTML e CSS/Desafios/001/minhas midias.html
+++ b/Web dev/HTML e CSS/Desafios/001/minhas midias.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minhas midias</title>
+    <style>
+        body{
+            background-color: rgb(51, 177, 13);
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    
+    <img src="jão edit.jpg" alt="João Pedro">
+    <h1>Um pouco sobre mim</h1>
+    <p>Sim</p>
+    <img src="icone-github.png" alt="git hub logo">
+    <a href="https://github.com/JoaoPedroDSS">Git hub do pai</a>
+    <br>
+    <img src="icone-youtube.png" alt="youtube logo">
+    <a href="https://www.youtube.com/channel/UCdOPN730m-9q8gO_Puy79Zw">Canal do You tube</a>
 </body>
 </html>
