--- a/Web dev/HTML e CSS/Desafios/003/Mapa-mundi/Mapa-mundi.html
+++ b/Web dev/HTML e CSS/Desafios/003/Mapa-mundi/Mapa-mundi.html
@@ -7,17 +7,17 @@
     <title>Mapa-Mundi</title>
 </head>
 <body>
-    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa03.png" alt="">
-    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa07.png" alt="">
-    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa05.png" alt="">
+    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa03.png" alt="mapa01">
+    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa07.png" alt="mapa02">
+    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa05.png" alt="mapa03">
     <br>
-    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa09.png" alt="">
-    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa01.png" alt="">
-    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa08.png" alt="">
+    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa09.png" alt="mapa04">
+    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa01.png" alt="mapa05">
+    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa08.png" alt="mapa06">
     <br>
-    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa06.png" alt="">
-    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa02.png" alt="">
-    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa04.png" alt="">
+    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa06.png" alt="mapa07">
+    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa02.png" alt="mapa08">
+    <img src="C:\Users\Larissa Yamile\Desktop\Dev Path\Web dev\HTML e CSS\Desafios\003\imagens\mapa04.png" alt="mapa09">
 
 </body>
 </html>
