Alteração do target do link

--- a/Web dev/HTML e CSS/Desafios/001/minhas midias.html
+++ b/Web dev/HTML e CSS/Desafios/001/minhas midias.html
@@ -7,8 +7,8 @@
     <title>Minhas midias</title>
     <style>
         body{
-            background-color: rgb(51, 177, 13);
-            color: white;
+            background-color: rgb(219, 163, 146);
+            color: rgb(19, 3, 3);
         }
     </style>
 </head>
@@ -20,6 +20,6 @@
     <a href="https://github.com/JoaoPedroDSS">Git hub do pai</a>
     <br>
     <img src="icone-youtube.png" alt="youtube logo">
-    <a href="https://www.youtube.com/channel/UCdOPN730m-9q8gO_Puy79Zw">Canal do You tube</a>
+    <a href="https://www.youtube.com/channel/UCdOPN730m-9q8gO_Puy79Zw" target="blank">Canal do You tube</a>
 </body>
 </html>
