criação das imagens

--- a/Web dev/HTML e CSS/ex008/imagensdinamicas.html
+++ b/Web dev/HTML e CSS/ex008/imagensdinamicas.html
@@ -9,11 +9,8 @@
 <body>
     <h1>Abra essas ibagens em diferentes dispositivos</h1>
 
-    <picture>
-        <source media="(1000px)" srcset="Imagens/Imagem M.png">
-        <img src="Imagens/Imagem G.jpg" alt="Imagem flexível">
-    
-    </picture>
+    <img src="/Web dev/HTML e CSS/Desafios/001/Git hub.png" alt="imagem flexível">
+
 
 </body>
 </html>
