--- a/Web dev/HTML e CSS/ex008/imagensdinamicas.html
+++ b/Web dev/HTML e CSS/ex008/imagensdinamicas.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imagens dinamicas</title>
+    <title>Imagens Dinamicas</title>
 </head>
 <body>
-    <h1>Abra essas ibagens em diferentes dispositivos</h1>
-
-    <img src="/Web dev/HTML e CSS/Desafios/001/Git hub.png" alt="imagem flexível">
-
-
+    <img src="Imagens/Imagem-G.xcf.bz2" alt="Sim">
 </body>
 </html>
