criação das imagens dinâmicas

--- a/Web dev/HTML e CSS/ex008/imagensdinamicas.html
+++ b/Web dev/HTML e CSS/ex008/imagensdinamicas.html
@@ -7,6 +7,11 @@
     <title>Imagens Dinamicas</title>
 </head>
 <body>
-    <img src="Imagens/Imagem-G.xcf.bz2" alt="Sim">
+    <h1>Hora da mágica</h1>
+    <picture>
+        <source media="(max-width: 750px)" srcset="Imagens/Imagem-P.png" type="image/png">
+        <source media="(max-width: 1000px)" srcset="Imagens/Imagem-M.png" type="image/png">
+        <img src="Imagens/Imagem-G.png" alt="Imagem flexivel">
+    </picture>
 </body>
 </html>
