concertado erro do favcon

--- a/Web dev/HTML e CSS/ex003/favcon.html
+++ b/Web dev/HTML e CSS/ex003/favcon.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favcon</title>
-    <link rel="shortcut icon" href="Web dev/Práticas/ex003/Chanut-Role-Playing-Adventure-Map.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Chanut-Role-Playing-Adventure-Map.ico" type="image/x-icon">
 </head>
 <body>
     <h1>Se liga no icone vadia</h1>
