--- a/Dio.me/FullStack Developer/Flexbox/003.html
+++ b/Dio.me/FullStack Developer/Flexbox/003.html
@@ -4,36 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex Wrap</title>
+    <title>Flex wrap</title>
+    <!--Flex-direction serve para ordenar seja em colunas seja em linha -->
     <style>
-        .flex-containers{
+        .flex-container{
             display: flex;
+            flex-direction: column;
             height: 150px;
+            border: 2px solid black;
+            max-width: 300px ;
+            padding: 2px;
         }
 
         .item{
             font-size: 24px;
             height: 50%;
             text-align: center;
-            width: 100px;
+            min-width: 100px;
+            line-height: 50px;
         }
-
+        
         .nowrap{
             flex-wrap: nowrap;
+        }
+        .wrap{
+            flex-wrap: wrap;
+        }
+        .wrap-reverse{
+            flex-wrap: wrap-reverse;
         }
         .blue{
             background-color: blue;
         }
+        .green{
+            background-color: lightgreen;
+        }
+        .orange{
+            background-color: orange;
+        }
     </style>
 </head>
 <body>
-    <h1>no wrap</h1>
-
+    <h1>No wrap</h1>
     <div class="flex-container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
+        <div class="item orange">1</div>
+        <div class="item green">2</div>
+        <div class="item blue">3</div>
+        <div class="item orange">4</div>
     </div>
-
+    <br>
+    <br>
+    <h1>Wrap</h1>
+    <div class="flex-container wrap">
+        <div class="item green">1</div>
+        <div class="item blue">2</div>
+        <div class="item orange">3</div>
+        <div class="item green">4</div>
+    </div>
+    <h1>Wrap reverse</h1>
+    <div class="flex-container wrap-reverse">
+        <div class="item green">1</div>
+        <div class="item blue">2</div>
+        <div class="item orange">3</div>
+        <div class="item green">4</div>
+    </div>
 </body>
 </html>
