--- a/Dio.me/FullStack Developer/Flexbox/005.html
+++ b/Dio.me/FullStack Developer/Flexbox/005.html
@@ -4,34 +4,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Justify content e align</title>
-    <!--flex start, flex end, space between, space around-->
-<style>
-.content{
-    justify-content: etc.;
-}
-.container{
-    display: flex;
-    max-width: 350px;
-    border: 1px solid black;
-}
-.item{
-    background-color: blueviolet;
-    margin: 5px;
-    color: white;
-    text-align: center;
-    flex: 1;
-}
-.center{
-    align-items: center;
-}
-</style>
+    <title>justify content e align text</title>
+    <style>
+        .container{
+            display: flex;
+            border: 1px solid black;
+            max-width: 350px;
+        }
+
+        .item{
+            background-color: blueviolet;
+            margin: 5px;
+            color: white;
+            text-align: center;
+            flex: 1;
+        }
+        .center{
+            align-items: center;
+        }
+        .stretch{
+            align-items: stretch;
+        }
+        .start{
+            align-items: flex-start;
+        }
+        .end{
+            align-items: flex-end;
+        }
+        .baseline{
+            align-items: baseline;
+        }
+        .column{
+            flex-direction: column;
+        }
+        .central{
+            height: 400px;
+            justify-content: center;
+            align-items: center;
+        }
+        .central .item{
+            flex: 0;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
+    <p>center</p>
     <section class="container center">
-        <div class="item">asdasdasdasd 1</div>
-        <div class="item">dasdasdasdasdasdasd 2</div>
-        <div class="item">asdassdaasdasdasdasdasdasdasd 3</div>
+        <div class="item">item 1</div>
+        <div class="item">lorem ispsum dolor sit amet</div>
+        <div class="item">item 3 mais algum texto. Lipsum</div>
+    </section>
+
+    <p>stretch</p>
+    <section class="container center stretch">
+        <div class="item">item 1</div>
+        <div class="item">lorem ispsum dolor sit amet Lorem ipsum, laboriosam eaque dignissimos amet illum placeat!</div>
+        <div class="item">item 3 mais algum texto. Lipsum</div>
+    </section>
+
+    <p>flex start</p>
+    <section class="container center start">
+        <div class="item">item 1</div>
+        <div class="item">lorem ispsum dolor sit amet</div>
+        <div class="item">item 3 mais algum texto. Lipsum</div>
+    </section>
+
+    <p>flex end</p>
+    <section class="container center end">
+        <div class="item">item 1</div>
+        <div class="item">lorem ispsum dolor sit amet</div>
+        <div class="item">item 3 mais algum texto. Lipsum</div>
+    </section>
+
+    <p>baseline</p>
+    <section class="container center baseline">
+        <div class="item"><br> item 1 </div>
+        <div class="item">lorem ispsum dolor sit amet</div>
+        <div class="item">item 3 mais algum texto. Lipsum</div>
+    </section>
+
+    <h1>column</h1>
+    <p>column flex start</p>
+    <section class="container center start column">
+        <div class="item">item 1</div>
+        <div class="item">lorem ispsum dolor sit amet</div>
+        <div class="item">item 3 mais algum texto. Lipsum</div>
+    </section>
+
+    <p>column flex end</p>
+    <section class="container center end column">
+        <div class="item">item 1</div>
+        <div class="item">lorem ispsum dolor sit amet</div>
+        <div class="item">item 3 mais algum texto. Lipsum</div>
+    </section>
+
+    <p>alinhamento central</p>
+    <section class="container  central center">
+       
+        <div class="item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium labore laboriosam, assumenda asdfas</div>
+       
     </section>
 </body>
 </html>
