--- a/Dio.me/FullStack Developer/Flexbox/Instagram login/index.html
+++ b/Dio.me/FullStack Developer/Flexbox/Instagram login/index.html
@@ -16,7 +16,7 @@
         <div class="flex-container">
             <img src="Imagens/Instagram_logo.svg.png" alt="Instagram logo" class="img">
             <input type="text" class="flex-item" placeholder="Telefone, nome de usuário ou email">
-            <input type="text" class="flex-item" placeholder="Senha">
+            <input type="password" class="flex-item" placeholder="Senha">
             <a class="botão" href="#"> Entrar</a>
             <p>ou</p> 
             <div class="facebook">
