finzalizado página login instagram

--- a/Dio.me/FullStack Developer/Flexbox/Instagram login/index.html
+++ b/Dio.me/FullStack Developer/Flexbox/Instagram login/index.html
@@ -26,13 +26,8 @@
             </div>
             <h1>Esqueceu a senha?</h1>
         </div>
-    </div>
-    <footer>
-        <div class="pe">
-            <h1>
-                Desenvolvido por João Pedro
-            </h1>
+        <div class="download">
         </div>
-    </footer>
+    </div>
 </body>
 </html>
