--- a/Dio.me/FullStack Developer/Javascript/Curso em vídeo/003/index.html
+++ b/Dio.me/FullStack Developer/Javascript/Curso em vídeo/003/index.html
@@ -23,21 +23,21 @@
     </div>
      <div>
         <h1>Somando números</h1>
-        <input type="number" name="txt1">
-        +
-        <input type="number" name="txt2">
-        <button onclick="somar()">Somar</button>
-     </div>
-     <p class="res">
-        resultado
-     </p>
+        <input type="number" name="txtn1" id="txtn1"> +
+        <input type="number" name="txtn2" id="txtn2">
+        <input type="button" value="Somar" onclick="somar()">
+        <div id="res">Resultado</div>
     <script>
-        var n1 = document.getElementById('txt1')
-        var n2 = document.getElementById('txt2')
-        var r = document.getElementsByClassName('res')
         function somar() {
-            r.innerText= (`A Soma de ${Number(n1)} com ${Number(n2)} é ${Number(n1)+ Number(n2)}`)
+            var tn1 = window.document.getElementById('txtn1')
+            var tn2 = window.document.getElementById('txtn2')
+            var res = window.document.getElementById('res')
+            var n1 = Number(tn1.value)
+            var n2 = Number(tn2.value)
+            var s = n1 + n2
+            res.innerHTML = (`A soma de ${n1} com ${n2} dá ${s}`)
         }
+
 
         var a = window.document.getElementById('area')
         a.addEventListener('click', clickou)
@@ -49,6 +49,8 @@
         }
         function entrou(){
             a.innerText = 'Entrou'
+            a.style.background = 'yellow'
+            a.style.color = 'black'
         }
         function saiu() {
             a.innerText= 'Saiu'
