--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX005/index.html
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX005/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="estilo.css">
   
 </head>
-<body onload="carregar()">
+<body>
     <header>
-        <h1>Hora do dia</h1>
+        <h1>Titulo</h1>
     </header>
     <section>
-        <div id="msg">
-           Aqui vai aparecer a mensagem...
+        <div>
+           
         </div>
-        <div id="foto">
-        <img src="magens/Manhã.jpg" alt="foto do dia" id="img">
+        <div>
+
         </div>
     </section>
 
