--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX005/index.html
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX005/index.html
@@ -10,14 +10,25 @@
 </head>
 <body>
     <header>
-        <h1>Titulo</h1>
+        <h1>Verificador de idade</h1>
     </header>
     <section>
         <div>
-           
+            <p>Ano de nascimento:
+               <input type="number" name="txtano" id="txtano" min="0">
+            </p>
+            <p>
+                <img src="" alt="">
+                Sexo:
+                <input type="radio" name="radsex" id="masc" checked>
+                <label for="masc">Masculino</label>
+                <input type="radio" name="radsex" id="Fem">
+                <label for="Fem">Feminino</label>
+            </p>
+            <p> <input type="button" value="Verificar" onclick="verificar()"></p>
         </div>
-        <div>
-
+        <div id="res">
+            Preencha os dados acima para ver o resultado
         </div>
     </section>
 
