--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX007/index.html
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX007/index.html
@@ -10,20 +10,15 @@
 </head>
 <body onload="carregar()">
     <header>
-        <h1>Vamos contar</h1>
+        <h1>Hora do dia</h1>
     </header>
     <section>
-        <div id="">
+        <div id="msg">
+           Aqui vai aparecer a mensagem...
+        </div>
+        <div id="foto">
             
         </div>
-        <div id="entradas">
-            <input type="number" name="passo" id="passo">Passo:</input>
-            <input type="number" name="fim" id="fim">Fim:</input>
-            <input type="number" name="inicio" id="inicio">Inicio:</input>
-           
-        </div>
-        <input type="button" value="Contar" onclick="contar()">
-        <p id="res">Aqui</p>
     </section>
 
     <footer>
