--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX006/index.html
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX006/index.html
@@ -17,7 +17,7 @@
             
         </div>
         <div id="dados">
-            <p>Inicio: <input type="number" name="inicio" id="incio"></p>
+            <p>Inicio: <input type="number" name="inicio" id="inicio"></p>
             <p>Fim: <input type="number" name="fim" id="fim"></p>
             <p>Passo: <input type="number" name="passo" id="passo"></p>
         </div>
