--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX007/index.html
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX007/index.html
@@ -8,16 +8,14 @@
     <link rel="stylesheet" href="estilo.css">
   
 </head>
-<body onload="carregar()">
+<body>
     <header>
-        <h1>Hora do dia</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div id="msg">
-           Aqui vai aparecer a mensagem...
-        </div>
-        <div id="foto">
-            
+           <p>Digite um número <input type="search" name="aqui" id="aqui"> <input type="button" value="Criar" id="botão" onclick="criar()"></p>
+           
         </div>
     </section>
 
