--- a/Dio.me/FullStack Developer/HTML e CSS/sim/Projeto Jaum ROMS/index.html
+++ b/Dio.me/FullStack Developer/HTML e CSS/sim/Projeto Jaum ROMS/index.html
@@ -13,11 +13,8 @@
        
         <h1 class="title">ROMS de SNES</h1>
         <img class="img-trigger" src="ibagens/capa chrono trigger.webp" alt="Capa de Chrono trigger SNES" >
-        <br> Download PT-BR
-        <br>
-        <article class="mediafire">
-        <p>MEDIAFIRE</p>    
-       <a rel="nofollow" href="https://seulink.digital/ctSNES" target="_blank"> &lt; LINK &gt; </a> </article>
+        <p></p>
+       </article>
         <p>vou transformar isso em um botão, rlx</p>
         <br> MEGA
     </article>
