--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX007/index.html
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX007/index.html
@@ -14,9 +14,12 @@
     </header>
     <section>
         <div id="msg">
-           <p>Digite um número <input type="search" name="aqui" id="aqui"> <input type="button" value="Criar" id="botão" onclick="criar()"></p>
+           <p>Digite um número <input type="number" name="aqui" id="aqui"> <input type="button" value="Criar" id="botão" onclick="criar()"></p>
            
         </div>
+        <select name="tabuada" id="tabuada" size="10">
+            <option value="Tabuada"> Tabuada</option>
+        </select>
     </section>
 
     <footer>
