--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX008/index.html
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX008/index.html
@@ -18,8 +18,9 @@
            
         </div>
         <select name="tabuada" id="Analisador" size="10">
-            <option value="Analisador">Analisador</option>
+            <option value="Analisador"></option>
         </select>
+        <br>
         <input type="button" value="Finalizar" onclick="finalizar()">
         <p id="retorno"></p>
     </section>
