criação do footer

--- a/Dio.me/FullStack Developer/Flexbox/Instagram login/index.html
+++ b/Dio.me/FullStack Developer/Flexbox/Instagram login/index.html
@@ -28,6 +28,8 @@
         </div>
         <div class="download">
         </div>
+      
     </div>
+    <footer><h2 class="autor">Jo@o Pedro</h2></footer>
 </body>
 </html>
