atualização do login do instagram

--- a/Dio.me/FullStack Developer/Flexbox/Instagram login/index.html
+++ b/Dio.me/FullStack Developer/Flexbox/Instagram login/index.html
@@ -24,9 +24,11 @@
                 face-img">
                 <a href="#">Entrar com  o Facebook</a>
             </div>
-            <h1>Esqueceu a senha?</h1>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer" class="esqueceu">Esqueceu a senha?</a>
+            <h4>Não tem conta? <a href="#">Criar conta</a></h4>
         </div>
         <div class="download">
+
         </div>
       
     </div>
