--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX005/index.html
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX005/index.html
@@ -25,7 +25,7 @@
                 <input type="radio" name="radsex" id="Fem">
                 <label for="Fem">Feminino</label>
             </p>
-            <p> <input type="button" value="Verificar" onclick="verificar()"></p>
+            <p> <input type="button" value="Verificar" onclick="verificar() onlo"></p>
         </div>
         <div id="res">
             Preencha os dados acima para ver o resultado
