--- a/Dio.me/FullStack Developer/projeto/treino carrossel/index.html
+++ b/Dio.me/FullStack Developer/projeto/treino carrossel/index.html
@@ -9,45 +9,40 @@
 </head>
 <body>
     <div class="content">
-        <div class="slide">
-            <input type="radio" name="slide" id="slide1" checked>
-            <input type="radio" name="slide" id="slide2">
-            <input type="radio" name="slide" id="slide3">
-            <input type="radio" name="slide" id="slide4">
-            <input type="radio" name="slide" id="slide5">
+            <div class="slide">
+                <input type="radio" name="slide" id="slide1" checked>
+                <input type="radio" name="slide" id="slide2">
+                <input type="radio" name="slide" id="slide3">
+                <input type="radio" name="slide" id="slide4">
+                <input type="radio" name="slide" id="slide5">
+                
 
-            <img src="" alt="" srcset="">
-            <img src="" alt="" srcset="">
-            <img src="" alt="" srcset="">
-            <img src="" alt="" srcset="">
-            <img src="" alt="" srcset="">
-        </div>
+                <div id="slide1  s1">
+                    <img src="imagens/1.jpg" alt="paisagem de fantansia com castelo" srcset="">
+                </div>
+                <div id="slide2">
+                    <img src="imagens/2.jpg" alt="arvore sakura em um pico com lava" srcset="">
+                </div>
+                <div id="slide3">
+                    <img src="imagens/3.jpg" alt="montanha com água" srcset="">
+                </div>
+                <div id="slide4">
+                    <img src="imagens/4.jpg" alt="arvore de the legends of zelda skyward sword" srcset="">
+                </div>
+                <div id="slide5">
+                    <img src="imagens/5.jpg" alt="paisagem de fantasia com castelo" srcset="">
+                </div>
+            </div>
 
 
-        <div class="slide">
-<img src="imagens/1.jpg" alt="paisagem de fantansia com castelo" srcset="">
-        </div>
-        <div class="slide">
-        <img src="imagens/2.jpg" alt="arvore sakura em um pico com lava" srcset="">
-        </div>
-        <div class="slide">
-            <img src="imagens/3.jpg" alt="montanha com água" srcset="">
-        </div>
-        <div class="slide">
-            <img src="imagens/4.jpg" alt="arvore de the legends of zelda skyward sword" srcset="">
-        </div>
-        <div class="slide">
-            <img src="imagens/5.jpg" alt="paisagem de fantasia com castelo" srcset="">
-        </div>
-
-        <div class="slide"></div>
-        <div class="navigation">
-            <label for="slide1" class="bar"></label>
-            <label for="slide2" class="bar"></label>
-            <label for="slide3" class="bar"></label>
-            <label for="slide4" class="bar"></label>
-            <label for="slide5" class="bar"></label>
-        </div>
+            <div class="slide"></div>
+            <div class="navigation">
+                <label for="slide1" class="bar"></label>
+                <label for="slide2" class="bar"></label>
+                <label for="slide3" class="bar"></label>
+                <label for="slide4" class="bar"></label>
+                <label for="slide5" class="bar"></label>
+            </div>
     </div>
 <script src="scritpt.js"></script>
 </body>
