--- a/Dio.me/FullStack Developer/projeto/treino carrossel/index.html
+++ b/Dio.me/FullStack Developer/projeto/treino carrossel/index.html
@@ -17,19 +17,19 @@
                 <input type="radio" name="slide" id="slide5">
                 
 
-                <div id="slide1  s1">
+                <div class="slide s1">
                     <img src="imagens/1.jpg" alt="paisagem de fantansia com castelo" srcset="">
                 </div>
-                <div id="slide2">
+                <div class="slide">
                     <img src="imagens/2.jpg" alt="arvore sakura em um pico com lava" srcset="">
                 </div>
-                <div id="slide3">
+                <div id="slide">
                     <img src="imagens/3.jpg" alt="montanha com água" srcset="">
                 </div>
-                <div id="slide4">
+                <div id="slide">
                     <img src="imagens/4.jpg" alt="arvore de the legends of zelda skyward sword" srcset="">
                 </div>
-                <div id="slide5">
+                <div id="slide">
                     <img src="imagens/5.jpg" alt="paisagem de fantasia com castelo" srcset="">
                 </div>
             </div>
