--- a/Dio.me/FullStack Developer/projeto/treino carrossel/index.html
+++ b/Dio.me/FullStack Developer/projeto/treino carrossel/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="content">
-            <div class="slide">
+            <div class="slides">
                 <input type="radio" name="slide" id="slide1" checked>
                 <input type="radio" name="slide" id="slide2">
                 <input type="radio" name="slide" id="slide3">
@@ -27,15 +27,14 @@
                     <img src="imagens/3.jpg" alt="montanha com água" srcset="">
                 </div>
                 <div id="slide">
-                    <img src="imagens/4.jpg" alt="arvore de the legends of zelda skyward sword" srcset="">
+                    <img src="imagens/4.jpg" alt="Isle of dawn sky childrens of light" srcset="">
                 </div>
                 <div id="slide">
-                    <img src="imagens/5.jpg" alt="paisagem de fantasia com castelo" srcset="">
+                    <img src="imagens/5.jpg" alt="Day light prairie sky childrens of light" srcset="">
                 </div>
             </div>
 
 
-            <div class="slide"></div>
             <div class="navigation">
                 <label for="slide1" class="bar"></label>
                 <label for="slide2" class="bar"></label>
