--- a/Dio.me/FullStack Developer/projeto/netflix-clone-master/index.html
+++ b/Dio.me/FullStack Developer/projeto/netflix-clone-master/index.html
@@ -5,22 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
 
-    <!--responsividade-->
-    <link rel="stylesheet" href="style/responsive.css">
-
-    <!--owl css-->
-    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
-    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
-
     <title>NETFLIX CLONE</title>
 </head>
 <body>
-    <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
-    <script src="js/owl/jquery.min.js"></script>
-    <script src="js/owl/owl.carousel.min.js"></script>
-    <script src="js/owl/setup.js"></script>
- 
+    <header>
+        <div class="container">
+            <h2 class="logo">NETFLIX </h2>
 
- 
+
+            <nav>
+                <a href="#">Inicio</a>
+                <a href="#">Séries</a>
+                <a href="#">Filmes</a>
+                <a href="#">Documentários</a>
+            </nav>
+            
+        </div>
+    </header>
+
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">House of cards</h3>
+                <p class="descrição">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA neste drama vencedor do Emmy e do Globo de Ouro.</p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
