--- a/Dio.me/FullStack Developer/projeto/netflix-clone-master/index.html
+++ b/Dio.me/FullStack Developer/projeto/netflix-clone-master/index.html
@@ -27,8 +27,18 @@
         <div class="filme-principal">
             <div class="container">
                 <h3 class="titulo">House of cards</h3>
-                <p class="descrição">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA neste drama vencedor do Emmy e do Globo de Ouro.</p>
+                <p class="descriçao">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA neste drama vencedor do Emmy e do Globo de Ouro.</p>
             </div>
+
+            <div class="botoes">
+                <button role="button" class="botao">
+                    ASSISTIR AGORA
+                </button>
+
+                <button role="button" class="botao">
+                    MAIS INFORMAÇÕES
+                </button>
+            </div>    
         </div>
     </main>
 </body>
