--- a/Dio.me/FullStack Developer/projeto/netflix-clone-master/index.html
+++ b/Dio.me/FullStack Developer/projeto/netflix-clone-master/index.html
@@ -33,7 +33,7 @@
         <div class="filme-principal">
             <div class="container">
                 <h3 class="titulo">House of cards</h3>
-                <p class="descriçao">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA nesta drama vencedor do Emmy e do Globo de Ouro.</p>
+                <p class="descriçao" id="descriçao">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA nesta drama vencedor do Emmy e do Globo de Ouro.</p>
             </div>
 
             <div class="botoes">
@@ -64,7 +64,7 @@
             <div class="item">
                 <img src="img/mini4.jpg" alt="">
             </div>
-            <div class="item">
+            <div class="item" >
                 <img src="img/mini5.jpg" alt="">
             </div>
             <div class="item">
@@ -90,6 +90,7 @@
     <script src="js/owl/jquery.min.js"></script>
     <script src="js/owl/owl.carousel.min.js"></script>
     <script src="js/owl/setup.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
