--- a/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
@@ -24,8 +24,21 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
+    <header>
+       <div class="container" id="nav-container">
+        <nav class="navbar navbar-expand-lg fixed-top">
+            <a href="#" class="nav-bar brand">
+                <img src="imagens/corvo.png" alt="Raven Agency logo"> Raven Agency
+            </a>
+            <button class="navbar-toggler" type="button" data-toggler="collapse" data-target="">
+
+            </button>
+        </nav>
+       </div>
+    </header>
+
     <button type="button" class="btn btn-link">Link</button>
     <button type="button" class="btn btn-dark">Dark</button>
 
 </body>
-</html>
+</html> 
