--- a/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
@@ -49,8 +49,59 @@
        </div>
     </header>
 
-    <button type="button" class="btn btn-link">Link</button>
-    <button type="button" class="btn btn-dark">Dark</button>
+    <main>
+        <!--Carousel, os bullets dele no caso/indicadores do slide-->
+        <div class="container-fluid">
+            <div id="mainSlider" class="carousel slide" data-bs-ride="true">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#mainSlider" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#mainSlider" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#mainSlider" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+
+                <!--Imagens do Carousel-->
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active ">
+                        <img src="imagens/banner1.png" alt="Projetos de e-commerce" class="d-block w-100">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Quer criar um e-commerce?</h2>
+                            <p>Conte conosco, temos mais de 30 lojas no portfólio</p>
+                            <a href="#" class="main-btn">Ver portifólio</a>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="imagens/banner2.png" alt="Engenharia de software" class="d-block w-100">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Quer tirar um projeto do papel?</h2>
+                            <p>Nossa equipe está pronta para lhe atender</p>
+                            <a href="#" class="main-btn">Entre em contato</a>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="imagens/banner3.png" alt="Manutenção de software" class="d-block w-100">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Quer concertar seu software?</h2>
+                            <p>Fale conosco que nós corrigimos</p>
+                            <a href="#" class="main-btn">Entre em contato </a>
+                        </div>
+                    </div>
+                </div>
+                <!--Setas do slide/carousek-->
+                <a href="#mainSlider" class="carousel-control-prev" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+              
+                <a href="#mainSlider" class="carousel-control-next" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </main>
 
 </body>
 </html> 
