imagem da agência

--- a/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
@@ -100,6 +100,24 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
+
+
+
+        <div id="about-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h3>Sobre a Raven Agency</h3>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="imagens/agencia.jpg" class="img-fluid" alt="Agência Raven">
+                    </div>
+                    <div class="col-md-6">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </main>
 
