--- a/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
@@ -113,7 +113,18 @@
                         <img src="imagens/agencia.jpg" class="img-fluid" alt="Agência Raven">
                     </div>
                     <div class="col-md-6">
-                        
+                        <h3 class="about-title">Uma agência que pensa no futuro</h3>
+                        <p>Projetos adaptados ao cliente</p>
+                        <p>Após a especificação de requisitos, nossos arquitetos de software transformam seu sonho em realidade</p>
+                        <p>Nossos designers trabalharão com layouts e interfaces focadas em impulsionar seus negócios</p>
+                        <p>Veja outros diferenciais</p>
+                        <ul id="about-list">
+                            <li> <i class="fas fa-check"></i> Utilização de Machine Learning</li>
+                            <li> <i class="fas fa-check"></i> Layout responsivo para todos os dispositivos</li>
+                            <li> <i class="fas fa-check"></i> Integração com diversos sistemas do mercado</li>
+                            <li><i class="fas fa-check"></i> Sistema de pagamento próprio</li>
+                            <li><i class="fas fa-check"></i> Densenvolvimento com metodologia ágil</li>
+                        </ul>
                     </div>
                 </div>
             </div>
