finalizado o sobre da página

--- a/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
@@ -102,12 +102,12 @@
             </div>
 
 
-
+        <!--SOBRE A EMPRESA-->
         <div id="about-area">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h3>Sobre a Raven Agency</h3>
+                        <h3 class="main-title">Sobre a Raven Agency</h3>
                     </div>
                     <div class="col-md-6">
                         <img src="imagens/agencia.jpg" class="img-fluid" alt="Agência Raven">
@@ -129,6 +129,10 @@
                 </div>
             </div>
         </div>
+         <!--SERVIÇOES DA EMPRESA-->
+         <div id="">
+
+         </div>
         </div>
     </main>
 
