--- a/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
@@ -130,8 +130,49 @@
             </div>
         </div>
          <!--SERVIÇOES DA EMPRESA-->
-         <div id="">
-
+         <div id="services-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="main-title">Nossas Especialidades</h3>
+                    </div>
+                    <div class="col-md-4 service-box">
+                        <i class="fas fa-mobile-alt"></i>
+                        <h4>Aplicativos</h4>
+                        <p>Utilizamos o real poder dos dispositivos móveis construindo aplicativos nativos</p>
+                    </div>
+                    <div class="col-md-4 service-box">
+                        <i class="fas fa-shopping-cart"></i>
+                        <h4>E-commerce</h4>
+                        <p>Temos uma plataforma própria de e-commerce que se adapta a qualquer regra (B2C e B2B)</p>
+                    </div>
+                    <div class="col-md-4 service-box">
+                        <i class="fas fa-paint-brush"></i>
+                        <h4>Design criativo</h4>
+                        <p>Nossos designers são especializados em UI/UX além de possuirem vasta experiência no mercado de software</p>
+                    </div>
+                    <div class="col-md-4 service-box">
+                        <i class="fas fa-mobile-alt"></i>
+                        <h4>Aplicativos</h4>
+                        <p>Utilizamos o real poder dos dispositivos móveis construindo aplicativos nativos</p>
+                    </div>
+                    <div class="col-md-4 service-box">
+                        <i class="fas fa-mobile-alt"></i>
+                        <h4>Aplicativos</h4>
+                        <p>Utilizamos o real poder dos dispositivos móveis construindo aplicativos nativos</p>
+                    </div>
+                    <div class="col-md-4 service-box">
+                        <i class="fas fa-mobile-alt"></i>
+                        <h4>Aplicativos</h4>
+                        <p>Utilizamos o real poder dos dispositivos móveis construindo aplicativos nativos</p>
+                    </div>
+                    <div class="col-md-4 service-box">
+                        <i class="fas fa-mobile-alt"></i>
+                        <h4>Aplicativos</h4>
+                        <p>Utilizamos o real poder dos dispositivos móveis construindo aplicativos nativos</p>
+                    </div>
+                </div>
+            </div>
          </div>
         </div>
     </main>
