Alterações na aba de especialidades

--- a/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                 </div>
-                <!--Setas do slide/carousek-->
+                <!--Setas do slide/carousel-->
                 <a href="#mainSlider" class="carousel-control-prev" role="button" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
@@ -152,19 +152,19 @@
                         <p>Nossos designers são especializados em UI/UX além de possuirem vasta experiência no mercado de software</p>
                     </div>
                     <div class="col-md-4 service-box">
-                        <i class="fas fa-mobile-alt"></i>
-                        <h4>Aplicativos</h4>
-                        <p>Utilizamos o real poder dos dispositivos móveis construindo aplicativos nativos</p>
+                        <i class="fab fa-google"></i>
+                        <h4>Experts em SEO</h4>
+                        <p>Com nosso serviços seu site será melhor posicionado e venderá mais</p>
                     </div>
                     <div class="col-md-4 service-box">
-                        <i class="fas fa-mobile-alt"></i>
-                        <h4>Aplicativos</h4>
-                        <p>Utilizamos o real poder dos dispositivos móveis construindo aplicativos nativos</p>
+                        <i class="fas fa-hands-helping"></i>
+                        <h4>Suporte 24/7</h4>
+                        <p>Você sempre terá  o amparo e suporte da nossa equipe independente da hora e da forma de contato (e-mail, skype, whatsapp) </p>
                     </div>
                     <div class="col-md-4 service-box">
-                        <i class="fas fa-mobile-alt"></i>
-                        <h4>Aplicativos</h4>
-                        <p>Utilizamos o real poder dos dispositivos móveis construindo aplicativos nativos</p>
+                        <i class="fas fa-server"></i>
+                        <h4>Experiência com servidores</h4>
+                        <p>Garantimos uptime e tempo de resposta do seu site para o seu cliente</p>
                     </div>
                     <div class="col-md-4 service-box">
                         <i class="fas fa-mobile-alt"></i>
