Criação do projeto do dashboard

--- a/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/index.html
@@ -22,6 +22,8 @@
     <!--Progress Bar-->
     <script src="script/progressbar.min.js"></script>
     <link rel="stylesheet" href="estilo.css">
+    <!--Script do pai-->
+    <script src="script/script.js"></script>
 </head>
 <body>
     <header>
@@ -166,10 +168,32 @@
                         <h4>Experiência com servidores</h4>
                         <p>Garantimos uptime e tempo de resposta do seu site para o seu cliente</p>
                     </div>
-                    <div class="col-md-4 service-box">
-                        <i class="fas fa-mobile-alt"></i>
-                        <h4>Aplicativos</h4>
-                        <p>Utilizamos o real poder dos dispositivos móveis construindo aplicativos nativos</p>
+                </div>
+            </div>
+         </div>
+         <!--DADOS DA EMPRESA-->
+         <div id="data-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 circle-box">
+                        <div id="circleA">
+                        </div>
+                        <p>Projetos entregues</p>
+                    </div>
+                    <div class="col-md-3 circle-box">
+                        <div id="circleB">
+                        </div>
+                        <p>Clientes felizes</p>
+                    </div>
+                    <div class="col-md-3 circle-box">
+                        <div id="circleC">
+                        </div>
+                        <p>Colaboradores</p>
+                    </div>
+                    <div class="col-md-3 circle-box">
+                        <div id="circleD">
+                        </div>
+                        <p>Cafezinhos</p>
                     </div>
                 </div>
             </div>
