--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX005/index.html
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX005/index.html
@@ -15,7 +15,7 @@
     <section>
         <div>
             <p>Ano de nascimento:
-               <input type="number" name="txtano" id="txtano" min="0">
+               <input type="number" title="txtano" id="txtano" min="0">
             </p>
             <p>
                 <img src="" alt="">
@@ -25,7 +25,7 @@
                 <input type="radio" name="radsex" id="Fem">
                 <label for="Fem">Feminino</label>
             </p>
-            <p> <input type="button" value="Verificar" onclick="verificar() onlo"></p>
+            <p> <input type="button" value="Verificar" onclick="verificar() "></p>
         </div>
         <div id="res">
             Preencha os dados acima para ver o resultado
